--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -11,5 +11,9 @@
       <%= link_to "delete", micropost, method: :delete,
                                        data: { confirm: "You sure?" } %>
     <% end %>
+    <% if !current_user?(micropost.user) %>
+      <%= link_to "retweet", micropost, method: :create,
+                                     data: { confirm: "You sure?" } %>
+    <% end %>
   </span>
 </li>
