--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,5 +1,11 @@
 <% @user ||= current_user %>
 <div class="stats">
+  <a href="<%= user_path(@user) %>">
+    <strong id="micropost" class="stat">
+      <%= @user.microposts.count %>
+    </strong>
+    micoposts
+  </a>
   <a href="<%= following_user_path(@user) %>">
     <strong id="following" class="stat">
       <%= @user.following.count %>
