--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,7 @@
         <%= @user.name %>
       </h1>
     </section>
+    bio
     <section class="stats">
       <%= render 'shared/stats' %>
     </section>
